🐛 fix layout issues

--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -2,7 +2,7 @@
 
 .contact {
   min-height: 100vh;
-  padding: 0;
+  padding: 2rem;
   position: relative;
   overflow: hidden;
   background-color: $color-background;
